--- a/seq2seq.ipynb
+++ b/seq2seq.ipynb
@@ -939,6 +939,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Perplexity measures the average uncertainty or unpredictability of an event. In the context of language modeling, perplexity is a way to estimate the average number of choices or possibilities that a language model assigns to each word in a given sequence.\n",
+        "\n",
+        "Mathematically, perplexity is defined as the exponentiated average negative log-likelihood per word:\n",
+        "\n",
+        "Perplexity = exp(∑(-log(p(w_i)))) / N\n",
+        "\n",
+        "where:\n",
+        "\n",
+        "∑(-log(p(w_i))) is the sum of the negative log-probabilities of each word in the sequence, representing the average uncertainty.\n",
+        "N is the total number of words in the sequence.\n",
+        "A lower perplexity indicates that the language model is more confident in its predictions, assigning higher probabilities to the correct words. A higher perplexity means that the language model is less certain, assigning lower probabilities to the correct words."
+      ],
+      "metadata": {
+        "id": "4q300mcJkbfk"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "X8yEFx9Uc2hk",
